using UnityEngine;

public class AnimatorProperties {
  public static readonly int Speed = Animator.StringToHash("Speed");
  public static readonly int IsJumping = Animator.StringToHash("IsJumping");
  public static readonly int Dead = Animator.StringToHash("Dead");
  public static readonly int Roll = Animator.StringToHash("Roll");
  public static readonly int Attack = Animator.StringToHash("Attack");
  public static readonly int Hurt = Animator.StringToHash("Hurt");
  public static readonly int IsAgroed = Animator.StringToHash("IsAgroed");
  public static readonly int Cast = Animator.StringToHash("Cast");
}